# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-drug"
version = "0.1.0"
description = "Drug environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "drug.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["drug", "drug.server", "drug.data", "drug.graph", "drug.grader", "drug.utils"]
package-dir = { "drug" = ".", "drug.server" = "server", "drug.data" = "data", "drug.graph" = "graph", "drug.grader" = "grader", "drug.utils" = "utils" }